docs/api/qiskit/0.43/qiskit.algorithms.QAOA.mdx
---
title: QAOA
description: API reference for qiskit.algorithms.QAOA
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.QAOA
---

# QAOA

<Class id="qiskit.algorithms.QAOA" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/algorithms/minimum_eigen_solvers/qaoa.py" signature="QAOA(optimizer=None, reps=1, initial_state=None, mixer=None, initial_point=None, gradient=None, expectation=None, include_custom=False, max_evals_grouped=1, callback=None, quantum_instance=None)">
  Bases: [`VQE`](qiskit.algorithms.VQE "qiskit.algorithms.minimum_eigen_solvers.vqe.VQE")

  Deprecated: Quantum Approximate Optimization Algorithm.

  The QAOA class has been superseded by the [`qiskit.algorithms.minimum_eigensolvers.QAOA`](qiskit.algorithms.minimum_eigensolvers.QAOA "qiskit.algorithms.minimum_eigensolvers.QAOA") class. This class will be deprecated in a future release and subsequently removed after that.

  [QAOA](https://arxiv.org/abs/1411.4028) is a well-known algorithm for finding approximate solutions to combinatorial-optimization problems.

  The QAOA implementation directly extends [`VQE`](qiskit.algorithms.VQE "qiskit.algorithms.VQE") and inherits VQE’s optimization structure. However, unlike VQE, which can be configured with arbitrary ansatzes, QAOA uses its own fine-tuned ansatz, which comprises $p$ parameterized global $x$ rotations and $p$ different parameterizations of the problem hamiltonian. QAOA is thus principally configured by the single integer parameter, *p*, which dictates the depth of the ansatz, and thus affects the approximation quality.

  An optional array of $2p$ parameter values, as the *initial\_point*, may be provided as the starting **beta** and **gamma** parameters (as identically named in the original [QAOA paper](https://arxiv.org/abs/1411.4028)) for the QAOA ansatz.

  An operator or a parameterized quantum circuit may optionally also be provided as a custom mixer Hamiltonian. This allows, as discussed in [this paper](https://doi.org/10.1103/PhysRevApplied.5.034007) for quantum annealing, and in [this paper](https://arxiv.org/abs/1709.03489) for QAOA, to run constrained optimization problems where the mixer constrains the evolution to a feasible subspace of the full Hilbert space.

  <Admonition title="Deprecated since version 0.24.0" type="danger">
    The class `qiskit.algorithms.minimum_eigen_solvers.qaoa.QAOA` is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. Instead, use the class `qiskit.algorithms.minimum_eigensolvers.QAOA`. See [https://qisk.it/algo\_migration](https://qisk.it/algo_migration) for a migration guide.
  </Admonition>

  **Parameters**

  *   **optimizer** ([*Optimizer*](qiskit.algorithms.optimizers.Optimizer "qiskit.algorithms.optimizers.Optimizer")  *|*[*Minimizer*](qiskit.algorithms.optimizers.Minimizer "qiskit.algorithms.optimizers.Minimizer") *| None*) – A classical optimizer, see also [`VQE`](qiskit.algorithms.VQE "qiskit.algorithms.VQE") for more details on the possible types.
  *   **reps** (*int*) – the integer parameter $p$ as specified in [https://arxiv.org/abs/1411.4028](https://arxiv.org/abs/1411.4028), Has a minimum valid value of 1.
  *   **initial\_state** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") *| None*) – An optional initial state to prepend the QAOA circuit with
  *   **mixer** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")  *|*[*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.OperatorBase")) – the mixer Hamiltonian to evolve with or a custom quantum circuit. Allows support of optimizations in constrained subspaces as per [https://arxiv.org/abs/1709.03489](https://arxiv.org/abs/1709.03489) as well as warm-starting the optimization as introduced in [http://arxiv.org/abs/2009.10095](http://arxiv.org/abs/2009.10095).
  *   **initial\_point** (*np.ndarray | None*) – An optional initial point (i.e. initial parameter values) for the optimizer. If `None` then it will simply compute a random one.
  *   **gradient** ([*GradientBase*](qiskit.opflow.gradients.GradientBase "qiskit.opflow.gradients.GradientBase") *| Callable\[\[np.ndarray | list], list] | None*) – An optional gradient operator respectively a gradient function used for optimization.
  *   **expectation** ([*ExpectationBase*](qiskit.opflow.expectations.ExpectationBase "qiskit.opflow.expectations.ExpectationBase") *| None*) – The Expectation converter for taking the average value of the Observable over the ansatz state function. When None (the default) an [`ExpectationFactory`](qiskit.opflow.expectations.ExpectationFactory "qiskit.opflow.expectations.ExpectationFactory") is used to select an appropriate expectation based on the operator and backend. When using Aer qasm\_simulator backend, with paulis, it is however much faster to leverage custom Aer function for the computation but, although VQE performs much faster with it, the outcome is ideal, with no shot noise, like using a state vector simulator. If you are just looking for the quickest performance when choosing Aer qasm\_simulator and the lack of shot noise is not an issue then set include\_custom parameter here to True (defaults to False).
  *   **include\_custom** (*bool*) – When expectation parameter here is None setting this to True will allow the factory to include the custom Aer pauli expectation.
  *   **max\_evals\_grouped** (*int*) – Max number of evaluations performed simultaneously. Signals the given optimizer that more than one set of parameters can be supplied so that potentially the expectation values can be computed in parallel. Typically this is possible when a finite difference gradient is used by the optimizer such that multiple points to compute the gradient can be passed and if computed in parallel improve overall execution time. Ignored if a gradient operator or function is given.
  *   **callback** (*Callable\[\[int, np.ndarray, float, float], None] | None*) – a callback that can access the intermediate data during the optimization. Four parameter values are passed to the callback as follows during each evaluation by the optimizer for its current set of parameters as it works towards the minimum. These are: the evaluation count, the optimizer parameters for the ansatz, the evaluated mean and the evaluated standard deviation.
  *   **quantum\_instance** ([*QuantumInstance*](qiskit.utils.QuantumInstance "qiskit.utils.QuantumInstance")  *|*[*Backend*](qiskit.providers.Backend "qiskit.providers.Backend") *| None*) – Quantum Instance or Backend

  ## Methods

  <span id="qiskit-algorithms-qaoa-compute-minimum-eigenvalue" />

  ### compute\_minimum\_eigenvalue

  <Function id="qiskit.algorithms.QAOA.compute_minimum_eigenvalue" name="compute_minimum_eigenvalue" signature="QAOA.compute_minimum_eigenvalue(operator, aux_operators=None)">
    Computes minimum eigenvalue. Operator and aux\_operators can be supplied here and if not None will override any already set into algorithm so it can be reused with different operators. While an operator is required by algorithms, aux\_operators are optional. To ‘remove’ a previous aux\_operators array use an empty list here.

    **Parameters**

    *   **operator** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.OperatorBase")) – Qubit operator of the Observable
    *   **aux\_operators** (*ListOrDict\[*[*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.OperatorBase")*] | None*) – Optional list of auxiliary operators to be evaluated with the eigenstate of the minimum eigenvalue main result and their expectation values returned. For instance in chemistry these can be dipole operators, total particle count operators so we can get values for these at the ground state.

    **Returns**

    MinimumEigensolverResult

    **Return type**

    [MinimumEigensolverResult](qiskit.algorithms.MinimumEigensolverResult "qiskit.algorithms.MinimumEigensolverResult")
  </Function>

  <span id="qiskit-algorithms-qaoa-construct-circuit" />

  ### construct\_circuit

  <Function id="qiskit.algorithms.QAOA.construct_circuit" name="construct_circuit" signature="QAOA.construct_circuit(parameter, operator)">
    Return the circuits used to compute the expectation value.

    **Parameters**

    *   **parameter** (*list\[float] | list\[*[*Parameter*](qiskit.circuit.Parameter "qiskit.circuit.Parameter")*] | np.ndarray*) – Parameters for the ansatz circuit.
    *   **operator** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.OperatorBase")) – Qubit operator of the Observable

    **Returns**

    A list of the circuits used to compute the expectation value.

    **Return type**

    list\[[QuantumCircuit](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")]
  </Function>

  <span id="qiskit-algorithms-qaoa-construct-expectation" />

  ### construct\_expectation

  <Function id="qiskit.algorithms.QAOA.construct_expectation" name="construct_expectation" signature="QAOA.construct_expectation(parameter, operator, return_expectation=False)">
    Generate the ansatz circuit and expectation value measurement, and return their runnable composition.

    **Parameters**

    *   **parameter** (*list\[float] | list\[*[*Parameter*](qiskit.circuit.Parameter "qiskit.circuit.Parameter")*] | np.ndarray*) – Parameters for the ansatz circuit.
    *   **operator** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.OperatorBase")) – Qubit operator of the Observable
    *   **return\_expectation** (*bool*) – If True, return the `ExpectationBase` expectation converter used in the construction of the expectation value. Useful e.g. to compute the standard deviation of the expectation value.

    **Returns**

    The Operator equalling the measurement of the ansatz `StateFn` by the Observable’s expectation `StateFn`, and, optionally, the expectation converter.

    **Raises**

    *   [**AlgorithmError**](qiskit.algorithms.AlgorithmError "qiskit.algorithms.AlgorithmError") – If no operator has been provided.
    *   [**AlgorithmError**](qiskit.algorithms.AlgorithmError "qiskit.algorithms.AlgorithmError") – If no expectation is passed and None could be inferred via the ExpectationFactory.

    **Return type**

    [OperatorBase](qiskit.opflow.OperatorBase "qiskit.opflow.OperatorBase") | tuple\[[OperatorBase](qiskit.opflow.OperatorBase "qiskit.opflow.OperatorBase"), [ExpectationBase](qiskit.opflow.expectations.ExpectationBase "qiskit.opflow.expectations.ExpectationBase")]
  </Function>

  <span id="qiskit-algorithms-qaoa-get-energy-evaluation" />

  ### get\_energy\_evaluation

  <Function id="qiskit.algorithms.QAOA.get_energy_evaluation" name="get_energy_evaluation" signature="QAOA.get_energy_evaluation(operator, return_expectation=False)">
    Returns a function handle to evaluates the energy at given parameters for the ansatz.

    This is the objective function to be passed to the optimizer that is used for evaluation.

    **Parameters**

    *   **operator** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.OperatorBase")) – The operator whose energy to evaluate.
    *   **return\_expectation** (*bool*) – If True, return the `ExpectationBase` expectation converter used in the construction of the expectation value. Useful e.g. to evaluate other operators with the same expectation value converter.

    **Returns**

    Energy of the hamiltonian of each parameter, and, optionally, the expectation converter.

    **Raises**

    **RuntimeError** – If the circuit is not parameterized (i.e. has 0 free parameters).

    **Return type**

    Callable\[\[np.ndarray], float | list\[float]] | tuple\[Callable\[\[np.ndarray], float | list\[float]], [ExpectationBase](qiskit.opflow.expectations.ExpectationBase "qiskit.opflow.expectations.ExpectationBase")]
  </Function>

  <span id="qiskit-algorithms-qaoa-print-settings" />

  ### print\_settings

  <Function id="qiskit.algorithms.QAOA.print_settings" name="print_settings" signature="QAOA.print_settings()">
    Preparing the setting of VQE into a string.

    **Returns**

    the formatted setting of VQE

    **Return type**

    str
  </Function>

  <span id="qiskit-algorithms-qaoa-supports-aux-operators" />

  ### supports\_aux\_operators

  <Function id="qiskit.algorithms.QAOA.supports_aux_operators" name="supports_aux_operators" signature="classmethod QAOA.supports_aux_operators()">
    Whether computing the expectation value of auxiliary operators is supported.

    If the minimum eigensolver computes an eigenstate of the main operator then it can compute the expectation value of the aux\_operators for that state. Otherwise they will be ignored.

    **Returns**

    True if aux\_operator expectations can be evaluated, False otherwise

    **Return type**

    bool
  </Function>

  ## Attributes

  ### ansatz

  <Attribute id="qiskit.algorithms.QAOA.ansatz" name="ansatz">
    Returns the ansatz.
  </Attribute>

  ### callback

  <Attribute id="qiskit.algorithms.QAOA.callback" name="callback">
    Returns callback
  </Attribute>

  ### expectation

  <Attribute id="qiskit.algorithms.QAOA.expectation" name="expectation">
    The expectation value algorithm used to construct the expectation measurement from the observable.
  </Attribute>

  ### gradient

  <Attribute id="qiskit.algorithms.QAOA.gradient" name="gradient">
    Returns the gradient.
  </Attribute>

  ### include\_custom

  <Attribute id="qiskit.algorithms.QAOA.include_custom" name="include_custom">
    Returns include\_custom
  </Attribute>

  ### initial\_point

  <Attribute id="qiskit.algorithms.QAOA.initial_point" name="initial_point">
    Returns initial point
  </Attribute>

  ### initial\_state

  <Attribute id="qiskit.algorithms.QAOA.initial_state" name="initial_state">
    Returns: Returns the initial state.
  </Attribute>

  ### max\_evals\_grouped

  <Attribute id="qiskit.algorithms.QAOA.max_evals_grouped" name="max_evals_grouped">
    Returns max\_evals\_grouped
  </Attribute>

  ### mixer

  <Attribute id="qiskit.algorithms.QAOA.mixer" name="mixer">
    Returns: Returns the mixer.
  </Attribute>

  ### optimizer

  <Attribute id="qiskit.algorithms.QAOA.optimizer" name="optimizer">
    Returns optimizer
  </Attribute>

  ### quantum\_instance

  <Attribute id="qiskit.algorithms.QAOA.quantum_instance" name="quantum_instance">
    Returns quantum instance.
  </Attribute>

  ### setting

  <Attribute id="qiskit.algorithms.QAOA.setting" name="setting">
    Prepare the setting of VQE as a string.
  </Attribute>
</Class>

